changement classe bouton pour CSS

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </li>
               <li>
                   <a 
-                  class="menu__link button__billet" 
+                  class="button__billet" 
                   href="billeterie.html">Billeterie</a>
               </li>
             </ul>
@@ -85,7 +85,7 @@
       <h2 class="section__sub-title sub-title">Voici les dates</h2>
       <p class="section__txt txt">Le <b>Festival Vis'Sport</b> se tiendra du 19 au 21 septembre à l'Axone de Montbéliard ! Trois jours dédiés au <b>cinéma</b> et au <b>sport</b>, avec des films inédits et des moments de partage autour de l'univers <b>sportif</b>.</p>
       <a 
-      class="menu__link button__billet" 
+      class="button__billet" 
       href="billeterie.html">Billeterie</a>
 
       <div class="caroussel">
@@ -172,7 +172,7 @@
     </a>
 
     <a 
-      class="menu__link button__billet" 
+      class="button__billet" 
       href="billeterie.html">Billeterie</a>
 
     <ul>
