--- a/billeterie.html
+++ b/billeterie.html
@@ -56,7 +56,7 @@
               </li>
               <li>
                 <a 
-                  class="menu__link button__billet" 
+                  class="button__billet" 
                   href="billeterie.html">Billeterie</a>
               </li>
             </ul>
@@ -127,7 +127,7 @@
             </a>
         
             <a 
-              class="menu__link button__billet" 
+              class="button__billet" 
               href="billeterie.html">Billeterie</a>
         
             <ul>
