--- a/infospratiques.html
+++ b/infospratiques.html
@@ -56,7 +56,7 @@
               </li>
               <li>
                 <a 
-                    class="menu__link button__billet" 
+                    class="button__billet" 
                     href="billeterie.html">Billeterie</a>
               </li>
             </ul>
@@ -183,7 +183,7 @@
         </a>
     
         <a 
-            class="menu__link button__billet" 
+            class="button__billet" 
             href="billeterie.html">Billeterie</a>
     
         <ul>
