--- a/invites.html
+++ b/invites.html
@@ -56,7 +56,7 @@
               </li>
               <li>
                 <a 
-                  class="menu__link button__billet" 
+                  class="button__billet" 
                   href="billeterie.html">Billeterie</a>
               </li>
             </ul>
@@ -124,7 +124,7 @@
         </a>
     
         <a 
-          class="menu__link button__billet" 
+          class="button__billet" 
           href="billeterie.html">Billeterie</a>
     
         <ul>
