--- a/programme.html
+++ b/programme.html
@@ -58,7 +58,7 @@
               </li>
               <li>
                 <a 
-                  class="menu__link button__billet" 
+                  class="button__billet" 
                   href="billeterie.html">Billeterie</a>
               </li>
             </ul>
@@ -289,7 +289,7 @@
         </a>
     
         <a 
-          class="menu__link button__billet" 
+          class="button__billet" 
           href="billeterie.html">Billeterie</a>
     
         <ul>
