--- a/apropos.html
+++ b/apropos.html
@@ -56,7 +56,7 @@
               <li>
                 <a>
                   <button class="button__billet">
-                    <a class="menu__link" href="billeterie.html">Billeterie</a>
+                    <a class="menu__link" href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
                   </button>
                 </a>
               </li>
