--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
               <li>
                 <a 
                   class="button__billet" 
-                  href="billeterie.html">Billeterie</a>
+                  href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
               </li>
             </ul>
           </nav>
@@ -177,7 +177,7 @@
     
         <a 
           class="button__billet" 
-          href="billeterie.html">Billeterie</a>
+          href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
     
         <ul>
           <li>
