--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <li>
                   <a 
                   class="button__billet" 
-                  href="billeterie.html">Billeterie</a>
+                  href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"> <img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
               </li>
             </ul>
           </nav>
@@ -86,7 +86,7 @@
       <p class="section__txt txt">Le <b>Festival Vis'Sport</b> se tiendra du 19 au 21 septembre à l'Axone de Montbéliard ! Trois jours dédiés au <b>cinéma</b> et au <b>sport</b>, avec des films inédits et des moments de partage autour de l'univers <b>sportif</b>.</p>
       <a 
       class="button__billet" 
-      href="billeterie.html">Billeterie</a>
+      href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
 
       <div class="caroussel">
         <a class="caroussel__link caroussel__link-films" href="/programme.html#goal">
@@ -172,8 +172,8 @@
     </a>
 
     <a 
-      class="button__billet" 
-      href="billeterie.html">Billeterie</a>
+      class="footer__button__billet" 
+      href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"> <img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
 
     <ul>
       <li>
