--- a/invites.html
+++ b/invites.html
@@ -57,7 +57,7 @@
               <li>
                 <a 
                   class="button__billet" 
-                  href="billeterie.html">Billeterie</a>
+                  href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
               </li>
             </ul>
           </nav>
@@ -124,8 +124,8 @@
         </a>
     
         <a 
-          class="button__billet" 
-          href="billeterie.html">Billeterie</a>
+          class="footer__button__billet" 
+          href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
     
         <ul>
           <li>
