--- a/programme.html
+++ b/programme.html
@@ -59,7 +59,7 @@
               <li>
                 <a 
                   class="button__billet" 
-                  href="billeterie.html">Billeterie</a>
+                  href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
               </li>
             </ul>
           </nav>
@@ -290,7 +290,7 @@
     
         <a 
           class="button__billet" 
-          href="billeterie.html">Billeterie</a>
+          href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
     
         <ul>
           <li>
