--- a/index.html
+++ b/index.html
@@ -35,10 +35,20 @@
           </button>
 
           <nav class="header__menu menu" id="mainNav" aria-hidden="true">
-            <img class="header__menu-img" src="./assets/Images/icons/ballonderugby.avif" alt="ballon de rugby en image">
-            <img class="header__menu-img" src="./assets/Images/icons/balledefoot.avif" alt="ballon de rugby en image">
-            <img class="header__menu-img" src="./assets/Images/icons/balledebasket.avif" alt="ballon de rugby en image">
+            <img 
+            class="header__menu-img rugby__img" 
+            src="./assets/Images/icons/ballonderugby.avif" 
+            alt="ballon de rugby en image">
+            <img 
+            class="header__menu-img foot__img" src="./assets/Images/icons/balledefoot.avif" 
+            alt="ballon de rugby en image">
+            <img 
+            class="header__menu-img basket__img" src="./assets/Images/icons/balledebasket.avif" 
+            alt="ballon de rugby en image">
             <ul class="menu__list list-unstyled">
+              <li class="menu__item">
+                <a class="menu__link underline" href="/">Vis'Sport</a>
+              </li>
               <li class="menu__item">
                 <a class="menu__link" href="programme.html">Programme</a>
               </li>
@@ -57,7 +67,7 @@
               <li>
                   <a 
                   class="button__billet" 
-                  href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"> <img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
+                  href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
               </li>
             </ul>
           </nav>
