ajout oublie page

--- a/apropos.html
+++ b/apropos.html
@@ -98,7 +98,7 @@
             <h1 class="equipe__titre titre">Notre équipe</h1>
             <ul class="equipe__list list">
                 <li class="equipe__list-elt">
-                    <h2 class="equipe__sub-title--nom sub-title">Claire Duval</h2>
+                    <h2 class="equipe__sub-title--nom sub-title orange">Claire Duval</h2>
                     <h2 class="equipe__sub-title-poste">Directrice du Festival</h2>
                     <ul class="equipe__list-respo list">
                         <li>Supervise l'ensemble de l'organisation.</li>
@@ -107,7 +107,7 @@
                     </ul>
                 </li>
                 <li class="equipe__list-elt">
-                    <h2 class="equipe__sub-title--nom sub-title">Malik Lemoine</h2>
+                    <h2 class="equipe__sub-title--nom sub-title orange">Malik Lemoine</h2>
                     <h2 class="equipe__sub-title-poste">Responsable de la Programmation</h2>
                     <ul class="equipe__list-respo list">
                         <li>Sélectionne les films et documentaires présentés au festival.</li>
@@ -116,7 +116,7 @@
                     </ul>
                 </li>
                 <li class="equipe__list-elt">
-                    <h2 class="equipe__sub-title--nom sub-title">Sophie Nguyen</h2>
+                    <h2 class="equipe__sub-title--nom sub-title orange">Sophie Nguyen</h2>
                     <h2 class="equipe__sub-title-poste">Chargée des Relations avec les Invités</h2>
                     <ul class="equipe__list-respo list">
                         <li>Organise l'accueil des invités (cinéastes, sportifs, conférenciers).</li>
@@ -125,7 +125,7 @@
                     </ul>
                 </li>
                 <li class="equipe__list-elt">
-                    <h2 class="equipe__sub-title--nom sub-title">Amara Diallo</h2>
+                    <h2 class="equipe__sub-title--nom sub-title orange">Amara Diallo</h2>
                     <h2 class="equipe__sub-title-poste">Responsable Communication</h2>
                     <ul class="equipe__list-respo list">
                         <li>Élaborer la stratégie de communication et de promotion.</li>
@@ -134,7 +134,7 @@
                     </ul>
                 </li>
                 <li class="equipe__list-elt">
-                    <h2 class="equipe__sub-title--nom sub-title">Julien Morel</h2>
+                    <h2 class="equipe__sub-title--nom sub-title orange">Julien Morel</h2>
                     <h2 class="equipe__sub-title-poste">Responsable Logistique</h2>
                     <ul class="equipe__list-respo list">
                         <li>Coordonne la mise en place des sites (salles de projection, stands, espaces VIP).</li>
@@ -146,8 +146,38 @@
         </section>
 
         <section class="charte">
-            <h1 class="charte__title-N">Engagement</h1>
-            <h1 class="charte__title-O">Thématiques</h1>
+            <h1 class="equipe__titre titre">Nos <span class="orange">valeurs clés</span></h1>
+            <ul class="charte__list list">
+              <li class="charte__list-elt">
+                <h2 class="charte__sub-title sub-title">Passion</h2>
+                <p class="charte__txt txt">Inspirer les spectateurs grâce à des œuvres et des expériences qui transmettent l’énergie et l’émotion du sport et du cinéma.</p>
+              </li>
+              <li class="charte__list-elt">
+                <h2 class="charte__sub-title sub-title">Diversité</h2>
+                <p class="charte__txt txt">Promouvoir des récits issus de cultures variées, valorisant les perspectives et voix sous-représentées.</p>
+              </li>
+              <li class="charte__list-elt">
+                <h2 class="charte__sub-title sub-title">Excellence</h2>
+                <p class="charte__txt txt">Offrir des contenus et une organisation de haute qualité pour garantir une expérience mémorable à chaque édition.</p>
+              </li>
+              <li class="charte__list-elt">
+                <h2 class="charte__sub-title sub-title">Durabilité</h2>
+                <p class="charte__txt txt">Intégrer des pratiques écoresponsables pour minimiser l’impact environnemental du festival.</p>
+              </li>
+            </ul>
+
+            <h1 class="equipe__titre titre center">Thématiques de l'Édition <br>2024<br><span class="orange">"L'unité dans la Diversité"</span></h1>
+            <ul class="charte__list list">
+              <li class="charte__list-elt">
+                <h2 class="charte__sub-title sub-title">Passion</h2>
+                <p class="charte__txt txt">Inspirer les spectateurs grâce à des œuvres et des expériences qui transmettent l’énergie et l’émotion du sport et du cinéma.</p>
+              </li>
+              <li class="charte__list-elt">
+                <h2 class="charte__sub-title sub-title">Diversité</h2>
+                <p class="charte__txt txt">Promouvoir des récits issus de cultures variées, valorisant les perspectives et voix sous-représentées.</p>
+              </li>
+
+            <h1 class="equipe__titre titre center">Engagement<br><span class="orange">Thématique</span></h1>
             <ul class="charte__list list">
                 <li class="charte__list-elt">
                     <h2 class="charte__sub-title sub-title">Sélection des Œuvres</h2>
