--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       >
       <p class="hero__txt-annexe txt-annexe">6 rue du Commandant Pierre Rossel, 25200 Montbéliard</p>
       <button class="hero__btn button__normal">Voir sur la carte</button>
-      <h2 class="hero__sub-title sub-title">Bienvenue au Festival Vis'Sport</h2>
+      <h2 class="hero__sub-title sub-title">Bienvenue au Festival <span class="orange">Vis'Sport</span></h2>
       <p class="hero__txt txt">Rendez-vous à l’<b>Axone</b> de <b>Montbéliard</b> pour une immersion cinématographique dédiée au sport ! <b>Vis'Sport</b> célèbre l’esprit de compétition et la persévérance des athlètes à travers des films, débats et rencontres. Passionnés de <b>sport</b> ou de <b>cinéma</b>, ne manquez pas cette fusion unique des deux univers !</p>
       </div>
 
@@ -92,7 +92,7 @@
         alt="icon simpliste en forme de calendrier"
         loading="lazy"
         >
-        <h2 class="section__sub-title sub-title">Voici les dates</h2>
+        <h2 class="section__sub-title sub-title">Voici les <span class="orange">dates</span></h2>
         <p class="section__txt txt">Le <b>Festival Vis'Sport</b> se tiendra du 19 au 21 septembre à l'Axone de Montbéliard ! Trois jours dédiés au <b>cinéma</b> et au <b>sport</b>, avec des films inédits et des moments de partage autour de l'univers <b>sportif</b>.</p>
         <a 
         class="button__billet" 
