css invites et autres

--- a/apropos.html
+++ b/apropos.html
@@ -68,7 +68,7 @@
     <main>
         <div class="hero hero--home">
             <h1 class="hero__title title">À propos</h1>
-            <h2 class="hero__sub-title sub-title">L'historique du festival</h2>
+            <h2 class="hero__sub-title sub-title orange">L'historique du festival</h2>
         </div>
 
         <section class="edition">
