--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </li>
                 <li>
                     <a 
-                    class="button__billet" 
+                    class="button__billet button__billet-menu" 
                     href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
                 </li>
               </ul>
