css a propos/réglages menu

--- a/apropos.html
+++ b/apropos.html
@@ -24,14 +24,14 @@
             />
           </a>
 
-          <button
-            class="header__menu-btn menu-btn"
-            aria-label="menu"
-            aria-expanded="false"
-            aria-controls="mainNav"
-          >
-            <span class="menu-btn__bar" aria-hidden="true"></span>
-          </button>
+        <button
+          class="header__menu-btn menu-btn"
+          aria-label="menu"
+          aria-expanded="false"
+          aria-controls="mainNav"
+        >
+          <span class="menu-btn__bar" aria-hidden="true"></span>
+        </button>
 
           <nav class="header__menu menu" id="mainNav" aria-hidden="true">
             <img class="header__menu-img rugby__img" src="./assets/Images/icons/ballonderugby.avif" alt="ballon de rugby en image">
@@ -67,7 +67,7 @@
     </header>
     <main>
         <div class="hero hero--home">
-            <h1 class="hero__title title">À propos</h1>
+            <h1 class="hero__title title">À propos du festival</h1>
             <h2 class="hero__sub-title sub-title orange">L'historique du festival</h2>
         </div>
 
@@ -162,7 +162,7 @@
               </li>
               <li class="charte__list-elt">
                 <h2 class="charte__sub-title sub-title">Durabilité</h2>
-                <p class="charte__txt txt">Intégrer des pratiques écoresponsables pour minimiser l’impact environnemental du festival.</p>
+                <p class="charte__txt txt fin__p-charte">Intégrer des pratiques écoresponsables pour minimiser l’impact environnemental du festival.</p>
               </li>
             </ul>
 
@@ -174,7 +174,7 @@
               </li>
               <li class="charte__list-elt">
                 <h2 class="charte__sub-title sub-title">Diversité</h2>
-                <p class="charte__txt txt">Promouvoir des récits issus de cultures variées, valorisant les perspectives et voix sous-représentées.</p>
+                <p class="charte__txt txt fin__p-charte">Promouvoir des récits issus de cultures variées, valorisant les perspectives et voix sous-représentées.</p>
               </li>
 
             <h1 class="equipe__titre titre center">Engagement<br><span class="orange">Thématique</span></h1>
@@ -189,7 +189,7 @@
                 </li>
                 <li class="charte__list-elt">
                     <h2 class="charte__sub-title sub-title">Éxpériences interactives</h2>
-                    <p class="charte__txt txt">Ateliers, compétitions sportives et échanges créent un espace où le public devient acteur de ces valeurs.</p>
+                    <p class="charte__txt txt fin__p-charte">Ateliers, compétitions sportives et échanges créent un espace où le public devient acteur de ces valeurs.</p>
                 </li>
             </ul>
         </section>
