menu + infos pratiques css

--- a/infospratiques.html
+++ b/infospratiques.html
@@ -75,7 +75,7 @@
         </div>
 
         <div class="section-infos">
-            <h2 class="section-infos__sub-title sub-title">Se rendre à Vis'Sport</h2>
+            <h2 class="section-infos__sub-title sub-title">Se rendre à <span class="orange">Vis'Sport</span></h2>
             <p class="section-infos__txt txt">Pour se rendre à l'Axone de Montbéliard en transports en commun, plusieurs options s'offrent à vous :</p>
             <p class="section-infos txt">La ligne de bus 1 dessert directement l'Axone.Prenez là depuis le centre-ville de Montbéliard, direction "Axone".L'arrêt "Axone" se trouve juste devant la salle.</p>
             <p class="section-infos txt">Vous pouvez également emprunter les lignes 2 ou 4,qui s'arrêtent à proximité, à l'arrêt "Champs-Montants".De là, comptez environ 5 minutes de marche jusqu'à l'Axone.</p>
@@ -105,22 +105,22 @@
             <ul class="section-infos__list">
                 <li class="section-infos__list--bold">Vendredi 19 septembre :
                     <ul class="section-infos__list--list">
-                        <li>Ouverture des portes : 18h00</li>
-                        <li>Projections de films : 18h30 à 22h00</li>
+                        <li class="light">Ouverture des portes : 18h00</li>
+                        <li class="light">Projections de films : 18h30 à 22h00</li>
                     </ul>
                 </li>
                 <li class="section-infos__list--bold">Samedi 20 septembre :
                     <ul class="section-infos__list--list">
-                        <li>Ouverture des portes : 10h00</li>
-                        <li>Projections de films : 10h30 à 22h00</li>
-                        <li>Ateliers et rencontres : 14h00 à 18h00</li>
+                        <li class="light">Ouverture des portes : 10h00</li>
+                        <li class="light">Projections de films : 10h30 à 22h00</li>
+                        <li class="light">Ateliers et rencontres : 14h00 à 18h00</li>
                     </ul>
                 </li>
                 <li class="section-infos__list--bold">Dimanche 21 septembre :
                     <ul class="section-infos__list--list">
-                        <li>Ouverture des portes : 10h00</li>
-                        <li>Projections de films : 10h30 à 20h00</li>
-                        <li>Clôture du festival : 20h30</li>
+                        <li class="light">Ouverture des portes : 10h00</li>
+                        <li class="light">Projections de films : 10h30 à 20h00</li>
+                        <li class="light">Clôture du festival : 20h30</li>
                     </ul>
                 </li>
             </ul>
