--- a/infospratiques.html
+++ b/infospratiques.html
@@ -81,7 +81,7 @@
             <p class="section-infos txt">Vous pouvez également emprunter les lignes 2 ou 4,qui s'arrêtent à proximité, à l'arrêt "Champs-Montants".De là, comptez environ 5 minutes de marche jusqu'à l'Axone.</p>
             <p class="section-infos txt">Pendant le festival, des navettes spéciales pourraient être mises en place entre le centre-ville et l'Axone. Renseignez vous auprès des organisateurs pour connaître les horaires et points de départ de ces navettes.</p>
             <p class="section-infostxt">N'oubliez pas de vérifier les horaires des bus sur le site de la compagnie de transport local, Evolity.Les fréquences peuvent être augmentées lors d'événements importants.</p>
-            <p class="section-infos txt">Enfin, si vous venez de l'extérieur de Montbéliard,la gare SNCF est bien desservie. De là,prenez le bus ligne 1 direction "Axone" pour rejoindre facilement le lieu du festival.</p>
+            <p class="section-infos fin__p-charte txt">Enfin, si vous venez de l'extérieur de Montbéliard,la gare SNCF est bien desservie. De là,prenez le bus ligne 1 direction "Axone" pour rejoindre facilement le lieu du festival.</p>
         </div>
 
         <div class="section-infos">
@@ -124,7 +124,7 @@
                     </ul>
                 </li>
             </ul>
-            <p>Assurez-vous d'arriver à l'avance pour profiter des activités et des rencontres avec les invités. Les horaires peuvent être sujets à modification, il est donc conseillé de vérifier les mises à jour sur le site officiel du festival.</p>
+            <p class="fin__p-charte">Assurez-vous d'arriver à l'avance pour profiter des activités et des rencontres avec les invités. Les horaires peuvent être sujets à modification, il est donc conseillé de vérifier les mises à jour sur le site officiel du festival.</p>
         </div>
 
         <div class="section-infos">
@@ -145,7 +145,7 @@
                 </li>
             </ul>
             <p>Le festival souhaite encourager la découverte du cinéma et la passion pour le sport, tout en restant abordable pour tous.</p>
-            <p>N'hésitez pas à réserver vos billets à l'avance !</p>
+            <p class="fin__p-charte">N'hésitez pas à réserver vos billets à l'avance !</p>
         </div>
 
         <div class="section-infos">
