--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
         class="button__billet" 
         href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
 
-        <div class="caroussel">
+        <div class="caroussel__films">
           <a class="caroussel__link caroussel__link-films" href="/programme.html#goal">
             <img 
-            class="caroussel__img caroussel__img-films"
+            class="carousel__img-films"
             src="./assets/Images/médias/goal_naissance_d_un_prodige1.avif" 
             alt="affiche du film Goal : naissance d'un prodige"
             loading="lazy"
@@ -111,22 +111,26 @@
 
           <a class="caroussel__link caroussel__link-films" href="/programme.html#space">
             <img 
-            class="caroussel__img caroussel__img-films"
+            class="carousel__img-films"
             src="./assets/Images/médias/spacejamaffiche1.avif" 
             alt="affiche du film Space Jam"
             loading="lazy"
             >
             </a>
-
           
           <a class="caroussel__link caroussel__link-films" href="/programme.html#rush">
           <img 
-          class="caroussel__img caroussel__img-films"
+          class="carousel__img-films"
           src="./assets/Images/médias/rushaffiche1.avif" 
           alt="affiche du film 'Rush de 2013'"
           loading="lazy"
           >
           </a>
+          <div class="carousel__films-button">
+            <button class="carousel__films-buttons carouselbutton--prev">❮</button>
+            <button class="carousel__films-buttons carousel__button--next">❯</button>
+          </div>
+        </div>
 
           <a 
           class="caroussel__button-films button__normal" 
