--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
         <div class="hero">
             <h1 class="hero__title title">Contactez nous !</h1>
             <img class="hero__img img"
-            src="./assets/Images/médias/buse_volity1.avif" 
+            src="./assets/Images/icons/lettre.avif" 
             alt="photo de bus evolity dans Montbeliard"
             loading="lazy">
         </div>
@@ -101,7 +101,7 @@
                         src="./assets/Images/icons/instagram-orange.avif" 
                         alt="icone instagram orange">
                     </a>
-                    <p>@VisSport_off</p>
+                    <p class="impact__p">@VisSport_off</p>
                 </li>
                 <li>
                     <a href="https://twitter.com">
@@ -110,7 +110,7 @@
                         src="./assets/Images/icons/X-orange.avif" 
                         alt="icone X orange">
                     </a>
-                    <p>@VisSport_off</p>
+                    <p class="impact__p">@VisSport_off</p>
                 </li>
                 <li>
                     <a href="https://facebook.com">
@@ -119,7 +119,7 @@
                         src="./assets/Images/icons/facebook-orange.avif" 
                         alt="icone facebook orange">
                     </a>
-                    <p></p>
+                    <p class="impact__p">VisSport_off</p>
                 </li>
             </ul>
         </div>
