--- a/index.html
+++ b/index.html
@@ -16,63 +16,54 @@
   </head>
 
   <body>
-      <header class="header">
-          <a class="header__logo-link" href="/">
-              <img
-                class="header__logo"
-                src="/assets/Images/logo/logovissport.avif"
-                alt="Icon de Vis'Sport"
-              />
-            </a>
+    <header class="header">
+      <a class="header__logo-link" href="/">
+          <img
+            class="header__logo"
+            src="/assets/Images/logo/logovissport.avif"
+            alt="Icon de Vis'Sport"
+          />
+        </a>
 
-            <button
-              class="header__menu-btn menu-btn"
-              aria-label="menu"
-              aria-expanded="false"
-              aria-controls="mainNav"
-            >
-              <span class="menu-btn__bar" aria-hidden="true"></span>
-            </button>
+        <button
+          class="header__menu-btn menu-btn"
+          aria-label="menu"
+          aria-expanded="false"
+          aria-controls="mainNav"
+        >
+          <span class="menu-btn__bar" aria-hidden="true"></span>
+        </button>
 
-            <nav class="header__menu menu" id="mainNav" aria-hidden="true">
-              
-              <img 
-              class="header__menu-img rugby__img" 
-              src="./assets/Images/icons/ballonderugby.avif" 
-              alt="ballon de rugby en image">
-              <img 
-              class="header__menu-img foot__img" src="./assets/Images/icons/balledefoot.avif" 
-              alt="ballon de rugby en image">
-              <img 
-              class="header__menu-img basket__img" src="./assets/Images/icons/balledebasket.avif" 
-              alt="ballon de rugby en image">
-              <ul class="menu__list list-unstyled">
-                <li class="menu__item">
-                  <a class="menu__link underline" href="/">Vis'Sport</a>
-                </li>
-                <li class="menu__item">
-                  <a class="menu__link" href="programme.html">Programme</a>
-                </li>
-                <li class="menu__item">
-                  <a class="menu__link" href="invites.html">Invités</a>
-                </li>
-                <li class="menu__item">
-                  <a class="menu__link" href="apropos.html">À propos</a>
-                </li>
-                <li class="menu__item">
-                  <a class="menu__link" href="infospratiques.html">Infos pratiques</a>
-                </li>
-                <li class="menu__item">
-                  <a class="menu__link" href="contact.html">Nous contacter</a>
-                </li>
-                <li>
-                    <a 
-                    class="button__billet button__billet-menu" 
-                    href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
-                </li>
-              </ul>
-            </nav>
-      </header>
+        <nav class="header__menu menu" id="mainNav" aria-hidden="true">
+          <img class="header__menu-img rugby__img" src="./assets/Images/icons/ballonderugby.avif" alt="ballon de rugby en image">
+          <img class="header__menu-img foot__img" src="./assets/Images/icons/balledefoot.avif" alt="ballon de rugby en image">
+          <img class="header__menu-img basket__img" src="./assets/Images/icons/balledebasket.avif" alt="ballon de rugby en image">
+          <ul class="menu__list list-unstyled">
+            <li class="menu__item">
+              <a class="menu__link underline" href="/">Vis'Sport</a>
+            </li><li class="menu__item">
+              <a class="menu__link" href="programme.html">Programme</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="invites.html">Invités</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="apropos.html">À propos</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="infospratiques.html">Infos pratiques</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="contact.html">Nous contacter</a>
+            </li>
+            <li>
+              <a 
+                class="button__billet" 
+                href="billeterie.html">Billeterie<img src="./assets/Images/icons/fast-backward.avif" alt="fleches icon"></a>
+            </li>
+          </ul>
+        </nav>
+  </header>
       <main>
         <div class="hero hero--home">
       <h1 class="hero__title title underline">Vis'Sport</h1>
